--- a/external_agent/examples/agent_builder/Dockerfile
+++ b/external_agent/examples/agent_builder/Dockerfile
@@ -1,15 +1,30 @@
+# Use the official lightweight Python image
 FROM python:3.11-slim
 
+# Set the working directory
 WORKDIR /app
-RUN useradd -m appuser
 
+# Create a non-root user and group
+RUN groupadd -g 1001 appgroup && useradd -m -u 1001 -g appgroup appuser
+
+# Copy dependency file and install dependencies first for better caching
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the rest of the application
 COPY . .
-RUN chown -R appuser:appuser /app
-RUN touch /app/current_token.txt && chmod 666 /app/current_token.txt
+
+# Ensure correct ownership and permissions
+RUN chown -R appuser:appgroup /app && chmod -R 755 /app
+
+# Explicitly create and set permissions for the token file
+RUN touch /app/current_token.txt && chown appuser:appgroup /app/current_token.txt && chmod 666 /app/current_token.txt
+
+# Switch to non-root user
 USER appuser
+
+# Expose port
 EXPOSE 8080
 
+# Start the application
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
